correcciones hechas en clase

--- a/Practica 2/Anexo/Ejercicio6/index.html
+++ b/Practica 2/Anexo/Ejercicio6/index.html
@@ -3,17 +3,17 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>El primer script</title>
-<script type="text/javascript" src="./Ejercicio2.js">
+<script type="text/javascript" src="./Ejercicio6.js">
 </script>
 </head>
 
 <body>
 <p>Esta página contiene el primer script</p>
-<form>
-    <label>DNI: </label>
-    <input type="text" id="dni">
-    <button type="submit" id="submit" onclick="mostrarDni()">Enviar</button>
-</form>
+
+<label>Introduce una cadena con una operación: </label>
+<input type="text" id="cadena">
+<button type="submit" id="submit" onclick="procesarCadena()">Enviar</button>
+
 <noscript>El navegador no tiene activado javascript</noscript>
 </body>
 </html>
