--- a/Practica 2/Anexo/Ejercicio2/index.html
+++ b/Practica 2/Anexo/Ejercicio2/index.html
@@ -11,7 +11,7 @@
 <p>Esta página contiene el primer script</p>
 <form>
     <label>DNI: </label>
-    <input type="text" id="dni" >
+    <input type="text" id="dni" name="dni">
     <button type="submit" id="submit" onclick="mostrarDni()">Enviar</button>
 </form>
 <noscript>El navegador no tiene activado javascript</noscript>
