--- a/Practica 3/Ejercicio4/index.html
+++ b/Practica 3/Ejercicio4/index.html
@@ -3,13 +3,15 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>El primer script</title>
-<script type="text/javascript" src="./Ejercicio6.js">
+<script type="text/javascript" src="./Ejercicio4.js">
 </script>
 </head>
 
 <body>
-<button type="button" style="width: 100px; height: 50px;" onclick= "mostrarHora() ">Hora actual</button>
-<p>Esta página contiene el primer script</p>
-<noscript>El navegador no tiene activado javascript</noscript>
+    <img src="" alt="">
+    <a href="">link</a>
+    <a href="">link</a>
+    <noscript>El navegador no tiene activado javascript</noscript>
+    <input type="button" onclick="links()" value="Sacar links">
 </body>
 </html>
