--- a/Practica 3/Ejercicio4/index.html
+++ b/Practica 3/Ejercicio4/index.html
@@ -8,10 +8,10 @@
 </head>
 
 <body>
+    <a href="">hola</a>
+    <a href="">hola</a>
+    <button type="button" " onclick= "enlaces()">enviar</button>
+    <button type="button" " onclick= "imagenes()">enviar2</button>
     <img src="" alt="">
-    <a href="">link</a>
-    <a href="">link</a>
-    <noscript>El navegador no tiene activado javascript</noscript>
-    <input type="button" onclick="links()" value="Sacar links">
 </body>
 </html>
