--- a/Practica 3/Ejercicio4/index.html
+++ b/Practica 3/Ejercicio4/index.html
@@ -10,8 +10,8 @@
 <body>
     <a href="">hola</a>
     <a href="">hola</a>
-    <button type="button" " onclick= "enlaces()">enviar</button>
-    <button type="button" " onclick= "imagenes()">enviar2</button>
+    <button type="button" " id="enlaces">enviar</button>
+    <button type="button" " id="imagenes">enviar2</button>
     <img src="" alt="">
 </body>
 </html>
