--- a/Practica 3/Anexo/Ejercicio4/index.html
+++ b/Practica 3/Anexo/Ejercicio4/index.html
@@ -3,24 +3,30 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>El primer script</title>
-<script type="text/javascript" src="./Ejercicio3.js">
+<script type="text/javascript" src="./Ejercicio4.js">
 </script>
 </head>
 
 <body>
     <p >
-        <a href="https://www.google.es"></a>
+        <a href="https://www.google.es">google</a>
     </p>
     <p>
-        <a href="https://www.aules.org"></a>
-        <a href="https://www.corsair.es"></a></p>
+        <a href="https://www.aules.org">aules</a>
+        <br>
+        <a href="https://www.corsair.es"></a>corsair</p>
     <p>
-        <a href="https://www.ikea.es"></a>
-        <a href="https://www.ieselcaminas.org"></a>
-        <a href="https://www.amazon.es"></a>
+        <a href="https://www.ikea.es">ikea</a>
+        <br>
+        <a href="https://www.ieselcaminas.org">ies el caminas</a>
+        <br>
+        <a href="https://www.amazon.es">amazon</a>
     </p>
     <button type="button" " id="enlaces">Numero de enlaces</button>
     <button type="button" " id="referencia">Referencia</button>
     <button type="button" " id="referenciaParrafo">Referencia por parrafo</button>
+    <button type="button" " id="cambiarColor">cambiar color</button>
+    <button type="button" " id="eliminarColor">eliminar color</button>
+
 </body>
 </html>
