Ejercicios realizados en clase

--- a/Practica4/Ejercicio6/index.html
+++ b/Practica4/Ejercicio6/index.html
@@ -3,13 +3,16 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>El primer script</title>
-<script type="text/javascript" src="./Ejercicio4.js">
+<script type="text/javascript" src="./Ejercicio6.js">
 </script>
 </head>
 
-<body id="contenedor">
+<body>
     
-    <p>Al pasar por encima de este texto cambiara de tamaño</p>
+    <button>boton</button>
+    <button>boton</button>
+    <button>boton</button>
+    <button>boton</button>
     
     <noscript>El navegador no tiene activado javascript</noscript>
 </body>
