--- a/PaginaWeb/index.html
+++ b/PaginaWeb/index.html
@@ -8,12 +8,22 @@
     <title>Infotel</title>
 </head>
 <body>
-<div class="contenedor">
+<div id="contenedor">
     <header class="encabezado">
         <p id="logo">Logo</p>
         <nav class="barra_de_navegacion">barra   de  navegacion</nav>
+        <div class="textoheader">
+            <h1 id="titulo">Infotel</h1>
+            <p id="texto">Tu tienda de smartphones de confianza.</p>
+        </div>
+        <div class="wave" style="height: 150px; overflow: hidden;"><svg viewBox="0 0 500 150" preserveAspectRatio="none"
+            style="height: 100%; width: 100%;">
+            <path d="M0.00,49.98 C150.00,150.00 349.20,-50.00 500.00,49.98 L500.00,150.00 L0.00,150.00 Z"
+                style="stroke: none; fill: #fff;"></path>
+        </svg></div>
     </header>
     <section class="introduccion"></section>
+    <section class="sobre_nosotros"></section>
 </div>
 </body>
 </html>
