--- a/Practica4/Ejercicio5/index.html
+++ b/Practica4/Ejercicio5/index.html
@@ -3,14 +3,12 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>El primer script</title>
-<script type="text/javascript" src="./Ejercicio7.js">
+<script type="text/javascript" src="./Ejercicio5.js">
 </script>
 </head>
 
 <body>
-    <form name="form_reloj">
-        <input type="text" name="reloj" size="10">
-        </form>
+    <input type="text" name="documento" id="documento" placeholder="Solo caracteres Numericos"/>
     <noscript>El navegador no tiene activado javascript</noscript>
 </body>
 </html>
