--- a/Practica4/anexo/Ejercicio2/index.html
+++ b/Practica4/anexo/Ejercicio2/index.html
@@ -3,12 +3,12 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>El primer script</title>
-<script type="text/javascript" src="./Ejercicio1.js">
+<script type="text/javascript" src="./Ejercicio2.js">
 </script>
 </head>
 
 <body>
-    
+   <a id="enlace" href="https://www.google.es">Enlace</a>
     <noscript>El navegador no tiene activado javascript</noscript>
 </body>
 </html>
