--- a/PaginaWeb/index.html
+++ b/PaginaWeb/index.html
@@ -20,10 +20,22 @@
             style="height: 100%; width: 100%;">
             <path d="M0.00,49.98 C150.00,150.00 349.20,-50.00 500.00,49.98 L500.00,150.00 L0.00,150.00 Z"
                 style="stroke: none; fill: #fff;"></path>
-        </svg></div>
+        </svg>
+        </div>
     </header>
-    <section class="introduccion"></section>
+    <section class="introduccion">
+        <h2>Buscar smartphone por marca</h2>
+        <p>Introduce la marca de smartphone que te interesa: </p>
+        <div id="buscador">
+            <input type="text">
+            <button type="submit">Buscar</button>
+        </div>
+        
+    </section>
     <section class="sobre_nosotros"></section>
+    <footer>
+        <p id="texto_footer">pie de página</p>
+    </footer>
 </div>
 </body>
 </html>
