cambio de nombre de clase

--- a/PaginaWeb/index.html
+++ b/PaginaWeb/index.html
@@ -43,7 +43,7 @@
         </div>
         
     </section>
-    <section class="sobre_nosotros"></section>
+    <section class="productos"></section>
     <footer>
         <p id="texto_footer">pie de página</p>
     </footer>
