Cambios en la página web

--- a/PaginaWeb/index.html
+++ b/PaginaWeb/index.html
@@ -8,7 +8,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script type="text/javascript" src="./javascript/menu.js"></script>
     <title>Infotel</title>
-</head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    </head>
 <body>
 <div id="contenedor">
     <header class="encabezado">
@@ -43,7 +46,17 @@
         </div>
         
     </section>
-    <section class="productos"></section>
+    <section class="productos">
+        <h2>Nuestros productos:</h2>
+        <div class="contenedor_productos">
+            <div class="producto">
+                <img src="./img/smartphone1.jpg" alt="smartphone 1">
+                <p>Producto1</p>
+            </div>
+            <div class="producto"><p>Producto2</p></div>
+            <div class="producto"><p>Producto3</p></div>
+        </div>
+    </section>
     <footer>
         <p id="texto_footer">pie de página</p>
     </footer>
