--- a/Practica5/Ejercicio1/index.html
+++ b/Practica5/Ejercicio1/index.html
@@ -9,15 +9,15 @@
 
 <body>
     <h1>Formulario</h1>
-    <form>
+    <form id="formulario">
         <label>Nombre: </label>
         <input type="text" name="nombre" id="nombre"><br>
         <label>Apellidos: </label>
         <input type="text" name="apellidos"><br>
         <label>Telefono: </label>
-        <input type="text" name="telefono"><br>
+        <input type="text" name="telefono" id="telefono"><br>
         <label>Dni: </label>
-        <input type="text" name="dni"><br>
+        <input type="text" name="dni" id="dni"><br>
         <label>Edad: </label>
         <input type="text" name="edad"><br>
         <label>Sexo: </label><br>
@@ -27,10 +27,10 @@
         <input type="file" accept="image/png,image/jpeg">
         <p><input type="checkbox"> Enviar publicidad</p><br>
         <label> Elige aficion favorita </label>
-        <select name="aficion">
-            <option value="1">musica</option>
-            <option value="2">deportes</option>
-            <option value="3">lectura</option>
+        <select name="aficion" id="aficion">
+            <option value="musica">musica</option>
+            <option value="deporte">deporte</option>
+            <option value="lectura">lectura</option>
         </select> <br>
         <br>
         <label> Observaciones: </label><br>
