añadir javascript productos y queda pendiente arreglar la barra de navegacion responsive

--- a/PaginaWeb/index.html
+++ b/PaginaWeb/index.html
@@ -7,6 +7,7 @@
     <link type="text/css" rel="stylesheet" href="./css/estilos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script type="text/javascript" src="./javascript/menu.js"></script>
+    <script type="text/javascript" src="./javascript/productos.js"></script>
     <title>Infotel</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -46,15 +47,45 @@
         </div>
         
     </section>
-    <section class="productos">
-        <h2>Nuestros productos:</h2>
+    <section class="productos" id="producto">
+        <h2>Productos mas vendidos:</h2>
         <div class="contenedor_productos">
             <div class="producto">
                 <img src="./img/smartphone1.jpg" alt="smartphone 1">
-                <p>Producto1</p>
+                <h3>Asus zenfone 7pro</h3>
+                <p>
+                    <strong>-Marca:</strong> Asus<br>
+                    <strong>-Procesador:</strong> Snapdragon 865+<br>
+                    <strong>-Ram:</strong> 8GB<br>
+                    <strong>-Almacenamiento:</strong> 256GB<br>
+                    <strong>-Precio:</strong> 799€<br>
+                </p>
+                <button id="">Mas informacion</button>
             </div>
-            <div class="producto"><p>Producto2</p></div>
-            <div class="producto"><p>Producto3</p></div>
+            <div class="producto">
+                <img src="./img/smartphone1.jpg" alt="smartphone 1">
+                <h3>Asus zenfone 7pro</h3>
+                <p>
+                    <strong>-Marca:</strong> Asus<br>
+                    <strong>-Procesador:</strong> Snapdragon 865+<br>
+                    <strong>-Ram:</strong> 8GB<br>
+                    <strong>-Almacenamiento:</strong> 256GB<br>
+                    <strong>-Precio:</strong> 799€<br>
+                </p>
+                <button id="">Mas informacion</button>
+            </div>
+            <div class="producto">
+                <img src="./img/smartphone1.jpg" alt="smartphone 1">
+                <h3>Asus zenfone 7pro</h3>
+                <p>
+                    <strong>-Marca:</strong> Asus<br>
+                    <strong>-Procesador:</strong> Snapdragon 865+<br>
+                    <strong>-Ram:</strong> 8GB<br>
+                    <strong>-Almacenamiento:</strong> 256GB<br>
+                    <strong>-Precio:</strong> 799€<br>
+                </p>
+                <button id="">Mas informacion</button>
+            </div>
         </div>
     </section>
     <footer>
