--- a/PaginaWeb/index.html
+++ b/PaginaWeb/index.html
@@ -7,6 +7,7 @@
     <link type="text/css" rel="stylesheet" href="./css/estilos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script type="text/javascript" src="./javascript/menu.js"></script>
+    <script type="text/javascript" src="./javascript/onload.js"></script>
     <script type="text/javascript" src="./javascript/productos.js"></script>
     <title>Infotel</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
