--- a/Tema 1/PaginaWeb/index.html
+++ b/Tema 1/PaginaWeb/index.html
@@ -24,9 +24,9 @@
         </div>
         <nav class="barra_de_navegacion" id="barra_de_navegacion">
             <ul>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Productos</a></li>
-                <li><a href="#">Contacto</a></li>
+                <li><a id="inicio">Inicio</a></li>
+                <li><a id="productos">Productos</a></li>
+                <li><a id="contacto">Contacto</a></li>
             </ul>
         </nav>
         <div class="menu-toogle" id="icono">
@@ -39,56 +39,58 @@
         </svg>
         </div>
     </header>
-    <section class="introduccion">
-        <h2>Buscar smartphone por marca</h2>
-        <p>Introduce la marca de smartphone que te interesa: </p>
-        <div id="buscador">
-            <input type="text">
-            <button type="submit">Buscar</button>
-        </div>
-        
-    </section>
-    <section class="productos" id="producto">
-        <h2>Productos mas vendidos:</h2>
-        <div class="contenedor_productos">
-            <div class="producto">
-                <img src="./img/smartphone1.jpg" alt="smartphone 1">
-                <h3>Asus zenfone 7pro</h3>
-                <p>
-                    <strong>-Marca:</strong> Asus<br>
-                    <strong>-Procesador:</strong> Snapdragon 865+<br>
-                    <strong>-Ram:</strong> 8GB<br>
-                    <strong>-Almacenamiento:</strong> 256GB<br>
-                    <strong>-Precio:</strong> 799€<br>
-                </p>
-                <button id="">Mas informacion</button>
+    <div id="contenido">
+        <section class="introduccion">
+            <h2>Buscar smartphone por marca</h2>
+            <p>Introduce la marca de smartphone que te interesa: </p>
+            <div id="buscador">
+                <input type="text">
+                <button type="submit">Buscar</button>
             </div>
-            <div class="producto">
-                <img src="./img/smartphone1.jpg" alt="smartphone 1">
-                <h3>Asus zenfone 7pro</h3>
-                <p>
-                    <strong>-Marca:</strong> Asus<br>
-                    <strong>-Procesador:</strong> Snapdragon 865+<br>
-                    <strong>-Ram:</strong> 8GB<br>
-                    <strong>-Almacenamiento:</strong> 256GB<br>
-                    <strong>-Precio:</strong> 799€<br>
-                </p>
-                <button id="">Mas informacion</button>
+            
+        </section>
+        <section class="productos" id="producto">
+            <h2>Productos mas vendidos:</h2>
+            <div class="contenedor_productos">
+                <div class="producto">
+                    <img src="./img/smartphone1.jpg" alt="smartphone 1">
+                    <h3>Asus zenfone 7pro</h3>
+                    <p>
+                        <strong>-Marca:</strong> Asus<br>
+                        <strong>-Procesador:</strong> Snapdragon 865+<br>
+                        <strong>-Ram:</strong> 8GB<br>
+                        <strong>-Almacenamiento:</strong> 256GB<br>
+                        <strong>-Precio:</strong> 799€<br>
+                    </p>
+                    <button id="">Mas informacion</button>
+                </div>
+                <div class="producto">
+                    <img src="./img/smartphone1.jpg" alt="smartphone 1">
+                    <h3>Asus zenfone 7pro</h3>
+                    <p>
+                        <strong>-Marca:</strong> Asus<br>
+                        <strong>-Procesador:</strong> Snapdragon 865+<br>
+                        <strong>-Ram:</strong> 8GB<br>
+                        <strong>-Almacenamiento:</strong> 256GB<br>
+                        <strong>-Precio:</strong> 799€<br>
+                    </p>
+                    <button id="">Mas informacion</button>
+                </div>
+                <div class="producto">
+                    <img src="./img/smartphone1.jpg" alt="smartphone 1">
+                    <h3>Asus zenfone 7pro</h3>
+                    <p>
+                        <strong>-Marca:</strong> Asus<br>
+                        <strong>-Procesador:</strong> Snapdragon 865+<br>
+                        <strong>-Ram:</strong> 8GB<br>
+                        <strong>-Almacenamiento:</strong> 256GB<br>
+                        <strong>-Precio:</strong> 799€<br>
+                    </p>
+                    <button id="">Mas informacion</button>
+                </div>
             </div>
-            <div class="producto">
-                <img src="./img/smartphone1.jpg" alt="smartphone 1">
-                <h3>Asus zenfone 7pro</h3>
-                <p>
-                    <strong>-Marca:</strong> Asus<br>
-                    <strong>-Procesador:</strong> Snapdragon 865+<br>
-                    <strong>-Ram:</strong> 8GB<br>
-                    <strong>-Almacenamiento:</strong> 256GB<br>
-                    <strong>-Precio:</strong> 799€<br>
-                </p>
-                <button id="">Mas informacion</button>
-            </div>
-        </div>
-    </section>
+        </section>
+    </div>
     <footer>
         <p id="texto_footer">pie de página</p>
     </footer>
