--- a/Tema 1/PaginaWeb/index.html
+++ b/Tema 1/PaginaWeb/index.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link type="text/css" rel="stylesheet" href="./css/estilos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script type="text/javascript" src="./javascript/menu.js"></script>
     <script type="text/javascript" src="./javascript/onload.js"></script>
+    <script type="text/javascript" src="./javascript/redirecciones.js"></script>
+    <script type="text/javascript" src="./javascript/menu.js"></script>
     <script type="text/javascript" src="./javascript/productos.js"></script>
+    
     <title>Infotel</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -40,56 +42,6 @@
         </div>
     </header>
     <div id="contenido">
-        <section class="introduccion">
-            <h2>Buscar smartphone por marca</h2>
-            <p>Introduce la marca de smartphone que te interesa: </p>
-            <div id="buscador">
-                <input type="text">
-                <button type="submit">Buscar</button>
-            </div>
-            
-        </section>
-        <section class="productos" id="producto">
-            <h2>Productos mas vendidos:</h2>
-            <div class="contenedor_productos">
-                <div class="producto">
-                    <img src="./img/smartphone1.jpg" alt="smartphone 1">
-                    <h3>Asus zenfone 7pro</h3>
-                    <p>
-                        <strong>-Marca:</strong> Asus<br>
-                        <strong>-Procesador:</strong> Snapdragon 865+<br>
-                        <strong>-Ram:</strong> 8GB<br>
-                        <strong>-Almacenamiento:</strong> 256GB<br>
-                        <strong>-Precio:</strong> 799€<br>
-                    </p>
-                    <button id="">Mas informacion</button>
-                </div>
-                <div class="producto">
-                    <img src="./img/smartphone1.jpg" alt="smartphone 1">
-                    <h3>Asus zenfone 7pro</h3>
-                    <p>
-                        <strong>-Marca:</strong> Asus<br>
-                        <strong>-Procesador:</strong> Snapdragon 865+<br>
-                        <strong>-Ram:</strong> 8GB<br>
-                        <strong>-Almacenamiento:</strong> 256GB<br>
-                        <strong>-Precio:</strong> 799€<br>
-                    </p>
-                    <button id="">Mas informacion</button>
-                </div>
-                <div class="producto">
-                    <img src="./img/smartphone1.jpg" alt="smartphone 1">
-                    <h3>Asus zenfone 7pro</h3>
-                    <p>
-                        <strong>-Marca:</strong> Asus<br>
-                        <strong>-Procesador:</strong> Snapdragon 865+<br>
-                        <strong>-Ram:</strong> 8GB<br>
-                        <strong>-Almacenamiento:</strong> 256GB<br>
-                        <strong>-Precio:</strong> 799€<br>
-                    </p>
-                    <button id="">Mas informacion</button>
-                </div>
-            </div>
-        </section>
     </div>
     <footer>
         <p id="texto_footer">pie de página</p>
