--- a/Tema 1/PaginaWeb/index.html
+++ b/Tema 1/PaginaWeb/index.html
@@ -43,8 +43,30 @@
     </header>
     <div id="contenido">
     </div>
-    <footer>
-        <p id="texto_footer">pie de página</p>
+    <footer class="pie-pagina">
+        <div class="grupo-1">
+            <div class="box">
+                <h2>Infotel</h2>
+                <p>Pagina web desarrollada para la asignatura de diseño de desarrollo web entorno cliente</p>
+            </div>
+            <div class="box">
+                <h2>SOBRE NOSOTROS</h2>
+                <p>Somos una empresa situada en Castellón de la plana. </p>
+                <p>Siempre intentamos ofrecer los mejores precios junto con la mayor calidad y satisfación del cliente posible.</p>
+            </div>
+            <div class="box">
+                <h2>SIGUENOS</h2>
+                <div class="red-social">
+                    <a href="#" class="fa fa-facebook"></a>
+                    <a href="#" class="fa fa-instagram"></a>
+                    <a href="#" class="fa fa-twitter"></a>
+                    <a href="#" class="fa fa-youtube"></a>
+                </div>
+            </div>
+        </div>
+        <div class="grupo-2">
+            <small>&copy; 2022 <b>David Balaguer</b> - Todos los Derechos Reservados.</small>
+        </div>
     </footer>
 </div>
 </body>
