--- a/Tema 3/Practica1/Ejercicio1/index.html
+++ b/Tema 3/Practica1/Ejercicio1/index.html
@@ -2,7 +2,7 @@
     <head>
         <title>Cargar html con ajax </title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-        <script type="text/javascript" src="./Ejercicio9.js"></script>
+        <script type="text/javascript" src="./Ejercicio1.js"></script>
     </head>
     <body>
         <div>
@@ -10,8 +10,8 @@
             <div>
                 <p>Segunda capa</p>
                 <div>
-                    <p>Tercera capa</p>ç
-                    <button></button>
+                    <p>Tercera capa</p>
+                    <button id="boton">mostrar capas</button>
                 </div>
             </div>
         </div>
