--- a/Tema 1/PaginaWeb/PaginaBootstrap/index.html
+++ b/Tema 1/PaginaWeb/PaginaBootstrap/index.html
@@ -28,21 +28,30 @@
 
 </head>
 <body>
-    <div class="row" id="nav">
-        <div class="col-4">
-            <img src="./img/logo.png">
+    <!-- Header -->
+    <div class="navbar navbar-expand-lg bg-white navbar-light shadow-sm py-3 py-lg-0 px-3 px-lg-0" id="nav">
+        <div class="col">
+            <img class="img-responsive" src="./img/logo.png">
         </div>
-        <div class="col-8">
-            <nav class="barra_de_navegacion" id="barra_de_navegacion">
-                <ul>
-                    <li><a id="inicio">Inicio</a></li>
-                    <li><a id="productos">Productos</a></li>
-                    <li><a id="contacto">Contacto</a></li>
-                </ul>
-            </nav>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+            <div class="navbar-nav ms-auto py-0">
+                <a href="">Inicio</a>
+                <a href="">Productos</a>
+                <a href="">Contacto</a>
+            </div>
         </div>
-        
     </div>
-
+    <!-- Fin Header -->
+    <!-- Ventana -->
+    <div class="row" id="ventana">
+        <div class="col">
+            <h1>Infotel</h1>
+            <p>Tu tienda de smartphones Online</p>
+        </div>
+    </div>
+    <!-- Fin Ventana -->
 </body>
 </html>
