Ejercicios hechos en clase

--- a/Tema 3/Practica2/Ejercicio4/index.html
+++ b/Tema 3/Practica2/Ejercicio4/index.html
@@ -2,9 +2,9 @@
     <head>
         <title>Cargar html con ajax </title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-        <script type="text/javascript" src="./Ejercicio3.js"></script>
+        <script type="text/javascript" src="./Ejercicio4.js"></script>
     </head>
     <body>
-        <button id="btn">Mostrar fichero xml</button>
+        <button id="btn">Mostrar fichero php</button>
         <div id="contenedor"></div>
 </html>
