Ejercicios hechos en clase

--- a/Tema 3/Practica2/Anexo/Ejercicio4/index.html
+++ b/Tema 3/Practica2/Anexo/Ejercicio4/index.html
@@ -5,7 +5,11 @@
         <script type="text/javascript" src="./Ejercicio4.js"></script>
     </head>
     <body>
-        <button id="btn">cargar js </button>
-        <div id="contenedor">
-        </div>
+        <form>
+            <label>User: </label><input type="text" id="user" name="user"><br><br>
+            <label>Pass: </label><input type="password" name="password" id="password">
+            <input type="submit" value="Submit">
+        </form>
+        <div class="contenedor"></div>
+    </body> 
 </html>
