--- a/Tema 1/PaginaWeb/PaginaBootstrap/index.html
+++ b/Tema 1/PaginaWeb/PaginaBootstrap/index.html
@@ -31,27 +31,61 @@
     <!-- Header -->
     <div class="navbar navbar-expand-lg bg-white navbar-light shadow-sm py-3 py-lg-0 px-3 px-lg-0" id="nav">
         <div class="col">
-            <img class="img-responsive" src="./img/logo.png">
+            <a href=""><img class="img-responsive" id="img" src="./img/logo.png"></a>
         </div>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-            <div class="navbar-nav ms-auto py-0">
-                <a href="">Inicio</a>
-                <a href="">Productos</a>
-                <a href="">Contacto</a>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" href="#">Productos</a>
+                  </li>
+                  <li class="nav-item active">
+                    <a class="nav-link" href="#">Contacto</a>
+                  </li>
+                </ul>
+              </div>
             </div>
-        </div>
+          </nav>
     </div>
     <!-- Fin Header -->
     <!-- Ventana -->
     <div class="row" id="ventana">
-        <div class="col">
-            <h1>Infotel</h1>
+        <div class="col align-self-center" id="textoVentana">
+            <h1><strong>Infotel</strong></h1>
             <p>Tu tienda de smartphones Online</p>
         </div>
     </div>
+    <div class="row" id="ventana">
+        <div class="col align-self-end wave" style="height: 150px; overflow: hidden;"><svg viewBox="0 0 500 150" preserveAspectRatio="none"
+            style="height: 100%; width: 100%;">
+            <path d="M0.00,49.98 C150.00,150.00 349.20,-50.00 500.00,49.98 L500.00,150.00 L0.00,150.00 Z"
+                style="stroke: none; fill: #fff;"></path>
+        </svg>
+        </div>
+    </div>
     <!-- Fin Ventana -->
+    <!-- Buscador -->
+    <div class="row text-center">
+        <div class="col busqueda">
+          <h2>Buscar smartphone por marca</h2>
+          <p>Introduce la marca de smartphone que te interesa: </p>
+          <div id="buscador">
+              <input type="text">
+              <button type="submit">Buscar</button>
+          </div>
+        </div>
+    </div>
+    <!-- Fin buscador -->
 </body>
 </html>
