--- a/Tema 3/Practica4/Ejercicio4/index.html
+++ b/Tema 3/Practica4/Ejercicio4/index.html
@@ -3,11 +3,19 @@
   <title>My Now Amazing Webpage</title>
   <link rel="stylesheet" type="text/css" href="./slick/slick.css"/>
   <link rel="stylesheet" type="text/css" href="./slick/slick-theme.css"/>
-  <script type="text/javascript" src="./Ejercicio4.js"></script>
+  <style type="text/css">
+    .carrousel {
+      margin: 20px;
+    }
+    .carrousel img {
+      width: 100%;
+    }
+  </style>
+  
   </head>
   <body>
 
-    <section class="horizontal-slider slider">
+    <section class="carrousel">
         <div>
             <img src="1.jpg">
         </div>
@@ -28,6 +36,7 @@
   <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
   <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
   <script type="text/javascript" src="./slick/slick.min.js"></script>
+  <script type="text/javascript" src="./Ejercicio4.js"></script>
 
   </body>
 </html>
